fix scrollbar color and color of keyword in text

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -3,7 +3,9 @@
     height: 100vh;
 }
 
-
+html {
+    scrollbar-color: #5f5f5f #2f3542;
+}
 #content {
     flex: 1;
     /* fill remaining space automatically */
@@ -526,7 +528,7 @@ body.dark {
   --text-muted: #9da5b4;       /* М'якший колір для тексту завдання */
   
   --code-bg: #282c34;          /* Фон для inline-коду (точно як в Atom One Dark) */
-  --code-text: #481c7a;        /* Приємний пастельно-червоний/рожевий для виділення коду */
+  --code-text: #97ceda;        /* Приємний пастельно-червоний/рожевий для виділення коду */
 
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
